Revamp index.html with new profile layout and content
Updated the HTML structure and content of the profile page, including adding a profile section, skills, experience, certifications, and contact information.

--- a/index.html
+++ b/index.html
@@ -2,296 +2,152 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Avinash Bollimuntha | Salesforce Developer</title>
+  <title>Avinash Bollimuntha | Salesforce Developer & Administrator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Senior Salesforce Developer & Administrator with 6+ years of experience delivering scalable, secure Salesforce solutions." />
   <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=SF+Pro+Display:wght@400;500;600;700&display=swap" rel="stylesheet" />
 </head>
+
 <body>
-  <header class="nav">
-    <div class="nav-inner">
-      <div class="nav-logo">AB</div>
-      <nav class="nav-links">
-        <a href="#about">About</a>
-        <a href="#experience">Experience</a>
-        <a href="#skills">Skills</a>
-        <a href="#certifications">Certifications</a>
-        <a href="#education">Education</a>
-        <a href="#contact">Contact</a>
-      </nav>
+
+  <!-- LIGHT BLUE ACCENT BAR -->
+  <div class="accent-bar"></div>
+
+  <!-- PROFILE SECTION -->
+  <section class="profile-section">
+    <img src="avinash.jpeg" alt="Profile Photo" class="profile-photo" />
+
+    <h1 class="name">Avinash Bollimuntha</h1>
+    <h2 class="title">Salesforce Developer & Administrator</h2>
+
+    <!-- SOCIAL ICON LINKS -->
+    <div class="social-links">
+
+      <!-- LinkedIn -->
+      <a href="https://www.linkedin.com/in/avinashb1998/" target="_blank">
+        <span class="icon">💼</span> LinkedIn
+      </a>
+
+      <!-- GitHub -->
+      <a href="https://avinashbollimuntha.github.io" target="_blank">
+        <span class="icon">🐙</span> GitHub
+      </a>
+
+      <!-- Trailhead -->
+      <a href="https://www.salesforce.com/trailblazer/avinashb1998" target="_blank">
+        <span class="icon">🌟</span> Trailhead
+      </a>
+
+      <!-- Email -->
+      <a href="mailto:avinashb200598@gmail.com">
+        <span class="icon">✉️</span> Email
+      </a>
+
+      <!-- Resume -->
+      <a href="Avinash_Resume.pdf" target="_blank">
+        <span class="icon">📄</span> Resume
+      </a>
+
+      <!-- Visa (F1 STEM OPT) — ICON ONLY -->
+      <span class="visa-tag">
+        <span class="icon">🛂</span> Visa: F1 STEM OPT
+      </span>
+
     </div>
-  </header>
+  </section>
 
-  <main>
-    <!-- HERO -->
-    <section class="hero" id="top">
-      <div class="hero-inner fade-in">
-        <div class="hero-text">
-          <p class="hero-kicker">Salesforce Developer & Administrator</p>
-          <h1 class="hero-title">Avinash Bollimuntha</h1>
-          <p class="hero-subtitle">
-            Building scalable, secure, enterprise‑grade Salesforce solutions across Sales Cloud, Service Cloud, and Experience Cloud.
-            6+ years of experience delivering automation, integrations, and CI/CD excellence for global organizations.
-          </p>
-          <div class="hero-actions">
-            <a class="btn primary" href="#" target="_blank" rel="noopener">Download Resume</a>
-            <a class="btn ghost" href="mailto:avinashb200598@gmail.com">Email</a>
-          </div>
-          <div class="hero-links">
-            <a href="https://www.linkedin.com/in/avinashb1998/" target="_blank" rel="noopener">LinkedIn</a>
-            <span>•</span>
-            <a href="https://avinashbollimuntha.github.io" target="_blank" rel="noopener">GitHub</a>
-            <span>•</span>
-            <a href="https://www.salesforce.com/trailblazer/avinashb1998" target="_blank" rel="noopener">Trailhead</a>
-          </div>
-        </div>
-      </div>
-    </section>
+  <!-- ABOUT -->
+  <section class="section">
+    <h2>🧑‍💼 About Me</h2>
+    <p>
+      I am a certified Salesforce Developer and Administrator with 6+ years of experience designing, building, and optimizing enterprise Salesforce platforms across Sales Cloud, Service Cloud, and Experience Cloud.
+    </p>
+    <p>
+      I specialize in Apex, Lightning Web Components, declarative automation, and secure platform administration. I bring a strong DevOps mindset using Salesforce DX, Git, Jenkins, and CI/CD pipelines to deliver reliable, high‑quality releases.
+    </p>
+    <p>
+      My approach blends technical depth with business understanding—translating requirements into scalable solutions, improving processes, and enabling teams to work smarter.
+    </p>
+  </section>
 
-    <!-- ABOUT -->
-    <section class="section" id="about">
-      <div class="section-inner fade-in">
-        <div class="section-header">
-          <h2>About</h2>
-        </div>
-        <div class="section-body">
-          <p>
-            I am a certified Salesforce Developer and Administrator with 6+ years of experience designing, building, and optimizing
-            enterprise Salesforce platforms. My work spans Sales Cloud, Service Cloud, Experience Cloud, and complex multi‑system
-            integrations across Healthcare, Manufacturing, Financial Services, and Insurance.
-          </p>
-          <p>
-            I specialize in Apex, Lightning Web Components, declarative automation, and secure platform administration. I bring a strong
-            DevOps mindset, leveraging Salesforce DX, Git, Jenkins, and CI/CD pipelines to deliver reliable, high‑quality releases.
-          </p>
-          <p>
-            My approach blends technical depth with business understanding—translating requirements into scalable solutions, improving
-            processes, and enabling teams to work smarter. I thrive in collaborative environments, partnering with cross‑functional teams
-            to deliver measurable impact.
-          </p>
-        </div>
-      </div>
-    </section>
+  <!-- SKILLS -->
+  <section class="section">
+    <h2>🛠️ Skills</h2>
+    <ul>
+      <li>Apex, Lightning Web Components, Visualforce</li>
+      <li>SOQL, SOSL, JavaScript, HTML, CSS</li>
+      <li>Flows, Validation Rules, Automation</li>
+      <li>REST/SOAP APIs, OAuth, SAML</li>
+      <li>MuleSoft, Informatica Cloud, Talend</li>
+      <li>Salesforce DX, Git, Jenkins, CI/CD</li>
+      <li>Reports, Dashboards, Tableau CRM</li>
+      <li>Sales Cloud, Service Cloud, Experience Cloud</li>
+    </ul>
+  </section>
 
-    <!-- EXPERIENCE -->
-    <section class="section" id="experience">
-      <div class="section-inner fade-in">
-        <div class="section-header">
-          <h2>Experience</h2>
-        </div>
-        <div class="timeline">
-          <article class="timeline-item">
-            <div class="timeline-meta">
-              <h3>Emerson Electric Co</h3>
-              <p class="role">Salesforce Admin/Developer</p>
-              <p class="date">Sep 2024 – Present · St Louis, MO</p>
-            </div>
-            <ul class="timeline-body">
-              <li>Manage Salesforce administration for Sales &amp; Service Cloud, including profiles, permission sets, and Lightning pages.</li>
-              <li>Lead CI/CD pipelines using GitHub, Bitbucket, SFDX, and Jenkins for multi‑sandbox deployments.</li>
-              <li>Replace legacy workflows with modern Flows to improve performance and maintainability.</li>
-              <li>Provide daily platform support, troubleshooting, and user management.</li>
-              <li>Build reports and dashboards for manufacturing, supply chain, and leadership teams.</li>
-              <li>Conduct data migrations using Talend and Data Loader and strengthen platform security through audits and access reviews.</li>
-            </ul>
-          </article>
+  <!-- EXPERIENCE -->
+  <section class="section">
+    <h2>💼 Experience</h2>
 
-          <article class="timeline-item">
-            <div class="timeline-meta">
-              <h3>BJC HealthCare</h3>
-              <p class="role">Salesforce Admin/Developer</p>
-              <p class="date">Jun 2023 – Aug 2024 · St Louis, MO</p>
-            </div>
-            <ul class="timeline-body">
-              <li>Administered Sales &amp; Service Cloud with scalable configuration and automation.</li>
-              <li>Managed CI/CD pipelines for smooth deployments across multiple sandboxes.</li>
-              <li>Built Flows, validation rules, and automation to streamline healthcare operations.</li>
-              <li>Created dashboards and reporting snapshots for leadership insights.</li>
-              <li>Performed data migrations and ensured data integrity.</li>
-              <li>Conducted security audits and root‑cause analysis for long‑term fixes.</li>
-            </ul>
-          </article>
-
-          <article class="timeline-item">
-            <div class="timeline-meta">
-              <h3>Tata Consultancy Services (OMSA)</h3>
-              <p class="role">Salesforce Admin/Developer</p>
-              <p class="date">Dec 2021 – May 2023 · Kolkata, India</p>
-            </div>
-            <ul class="timeline-body">
-              <li>Configured Sales &amp; Service Cloud for insurance workflows.</li>
-              <li>Built automation using Flows, validation rules, and process automation.</li>
-              <li>Developed dashboards for underwriting, claims, and sales teams.</li>
-              <li>Integrated AWS Lambda and REST services with Salesforce.</li>
-              <li>Managed deployments using SFDX, Git, and Jenkins.</li>
-              <li>Configured Conga Composer for streamlined policy document generation.</li>
-            </ul>
-          </article>
-
-          <article class="timeline-item">
-            <div class="timeline-meta">
-              <h3>Standard Chartered</h3>
-              <p class="role">Salesforce Administrator</p>
-              <p class="date">Jun 2019 – Nov 2021 · Bangalore, India</p>
-            </div>
-            <ul class="timeline-body">
-              <li>Managed global Salesforce administration for banking operations.</li>
-              <li>Built automation to streamline lead and case management.</li>
-              <li>Created dashboards for audit, compliance, and operational insights.</li>
-              <li>Performed data cleansing and migrations using Data Loader and Workbench.</li>
-              <li>Ensured regulatory compliance through permission audits and metadata reviews.</li>
-              <li>Led process improvements to enhance productivity and reduce onboarding time.</li>
-            </ul>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <!-- SKILLS -->
-    <section class="section" id="skills">
-      <div class="section-inner fade-in">
-        <div class="section-header">
-          <h2>Skills</h2>
-        </div>
-        <div class="grid">
-          <div class="card">
-            <h3>Core Salesforce Development</h3>
-            <ul>
-              <li>Apex</li>
-              <li>Lightning Web Components</li>
-              <li>Visualforce</li>
-              <li>SOQL / SOSL</li>
-              <li>JavaScript, HTML, CSS</li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Salesforce Administration</h3>
-            <ul>
-              <li>Profiles, Permission Sets, Sharing</li>
-              <li>Flows, Validation Rules, Automation</li>
-              <li>Custom Objects, Record Types, Page Layouts</li>
-              <li>Reports, Dashboards, Tableau CRM</li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Integrations</h3>
-            <ul>
-              <li>REST, SOAP, Bulk, Streaming APIs</li>
-              <li>OAuth 2.0, SAML</li>
-              <li>MuleSoft, Informatica Cloud, Talend, Jitterbit</li>
-              <li>AWS Lambda, Heroku Connect</li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>DevOps &amp; CI/CD</h3>
-            <ul>
-              <li>Salesforce DX</li>
-              <li>Git, Bitbucket</li>
-              <li>Jenkins, GitLab CI/CD, Gearset</li>
-              <li>Automated unit testing</li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Data &amp; ETL</h3>
-            <ul>
-              <li>Data Loader, Workbench</li>
-              <li>Informatica Cloud</li>
-              <li>Talend</li>
-              <li>MuleSoft</li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Cloud Platforms</h3>
-            <ul>
-              <li>Salesforce</li>
-              <li>Heroku</li>
-              <li>AWS</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- CERTIFICATIONS -->
-    <section class="section" id="certifications">
-      <div class="section-inner fade-in">
-        <div class="section-header">
-          <h2>Certifications</h2>
-        </div>
-        <div class="grid">
-          <div class="pill-card">Salesforce Certified Administrator</div>
-          <div class="pill-card">Salesforce Certified Platform Developer I</div>
-          <div class="pill-card">Salesforce Certified Platform App Builder</div>
-          <div class="pill-card">Salesforce Certified Industries CPQ Developer</div>
-          <div class="pill-card">Salesforce Certified Agentforce Specialist</div>
-        </div>
-      </div>
-    </section>
-
-    <!-- EDUCATION -->
-    <section class="section" id="education">
-      <div class="section-inner fade-in">
-        <div class="section-header">
-          <h2>Education</h2>
-        </div>
-        <div class="education-list">
-          <div class="education-item">
-            <h3>Masters in Computer Science</h3>
-            <p class="edu-meta">Southeast Missouri State University · Dec 2024</p>
-          </div>
-          <div class="education-item">
-            <h3>BTech, Mechanical Engineering</h3>
-            <p class="edu-meta">JNTU Kakinada · Jul 2020</p>
-          </div>
-          <div class="education-item">
-            <h3>Diploma, Mechanical Engineering</h3>
-            <p class="edu-meta">SBTET · Apr 2017</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section class="section" id="contact">
-      <div class="section-inner fade-in">
-        <div class="section-header">
-          <h2>Contact</h2>
-        </div>
-        <div class="contact-block">
-          <p>If you’d like to discuss Salesforce roles, architecture, or enterprise implementations, feel free to reach out.</p>
-          <div class="contact-list">
-            <p><strong>Email:</strong> <a href="mailto:avinashb200598@gmail.com">avinashb200598@gmail.com</a></p>
-            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/avinashb1998/" target="_blank" rel="noopener">linkedin.com/in/avinashb1998</a></p>
-            <p><strong>Trailhead:</strong> <a href="https://www.salesforce.com/trailblazer/avinashb1998" target="_blank" rel="noopener">salesforce.com/trailblazer/avinashb1998</a></p>
-            <p><strong>GitHub Pages:</strong> <a href="https://avinashbollimuntha.github.io" target="_blank" rel="noopener">avinashbollimuntha.github.io</a></p>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div class="footer-inner">
-      <p>© <span id="year"></span> Avinash Bollimuntha · Salesforce Developer</p>
+    <div class="experience-item">
+      <h3>Emerson Electric Co — Salesforce Admin/Developer</h3>
+      <p class="date">Sep 2024 – Present · St Louis, MO</p>
+      <ul>
+        <li>Manage Salesforce administration for Sales & Service Cloud.</li>
+        <li>Lead CI/CD pipelines using GitHub, Bitbucket, SFDX, Jenkins.</li>
+        <li>Replaced legacy workflows with modern Flows.</li>
+        <li>Built dashboards for manufacturing and leadership teams.</li>
+      </ul>
     </div>
-  </footer>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-    const observer = new IntersectionObserver(
-      entries => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add('visible');
-          }
-        });
-      },
-      { threshold: 0.15 }
-    );
-    document.querySelectorAll('.fade-in').forEach(el => observer.observe(el));
-  </script>
+    <div class="experience-item">
+      <h3>BJC HealthCare — Salesforce Admin/Developer</h3>
+      <p class="date">Jun 2023 – Aug 2024 · St Louis, MO</p>
+      <ul>
+        <li>Administered Sales & Service Cloud with scalable automation.</li>
+        <li>Managed CI/CD pipelines for multi‑sandbox deployments.</li>
+        <li>Built Flows and validation rules for healthcare operations.</li>
+      </ul>
+    </div>
+
+    <div class="experience-item">
+      <h3>Tata Consultancy Services (OMSA)</h3>
+      <p class="date">Dec 2021 – May 2023 · Kolkata, India</p>
+      <ul>
+        <li>Configured Sales & Service Cloud for insurance workflows.</li>
+        <li>Integrated AWS Lambda and REST services with Salesforce.</li>
+        <li>Managed deployments using SFDX, Git, Jenkins.</li>
+      </ul>
+    </div>
+
+    <div class="experience-item">
+      <h3>Standard Chartered — Salesforce Administrator</h3>
+      <p class="date">Jun 2019 – Nov 2021 · Bangalore, India</p>
+      <ul>
+        <li>Managed global Salesforce administration for banking operations.</li>
+        <li>Built automation for lead and case management.</li>
+        <li>Performed data cleansing and migrations.</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- CERTIFICATIONS -->
+  <section class="section">
+    <h2>🎓 Certifications</h2>
+    <ul>
+      <li>Salesforce Certified Administrator</li>
+      <li>Salesforce Certified Platform Developer I</li>
+      <li>Salesforce Certified Platform App Builder</li>
+      <li>Salesforce Certified Industries CPQ Developer</li>
+      <li>Salesforce Certified Agentforce Specialist</li>
+    </ul>
+  </section>
+
+  <!-- CONTACT -->
+  <section class="section">
+    <h2>✉️ Contact</h2>
+    <p><strong>Phone:</strong> 314‑299‑4138</p>
+    <p><strong>Email:</strong> <a href="mailto:avinashb200598@gmail.com">avinashb200598@gmail.com</a></p>
+  </section>
+
 </body>
 </html>
