Modify job opportunity status in index.html
Updated job opportunity status in header and ensured proper formatting.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header class="header">
             <h1>Avinash Bollimuntha</h1>
             <div class="role">Salesforce Developer & Administrator</div>
-            <span class="badge">Seeking Full‑Time & C2C Opportunities</span>
+            <span class="badge">Seeking Full‑Time & W2 & C2C Opportunities</span>
         </header>
 
         <!-- MAIN GRID -->
@@ -116,11 +116,11 @@
                     <span>🛂</span><span>Visa</span>
                 </a>
 
-                <a href="https://drive.google.com/drive/u/1/home" class="doc-btn">
+                <a href="https://drive.google.com/drive/u/1/home" target="_blank" class="doc-btn">
                     <span>🪪</span><span>ID</span>
                 </a>
 
-                <a href="https://drive.google.com/drive/u/1/folders/1VOkj9aZkndC9CPXhiomb7tfGM8HCXRdl" class="doc-btn">
+                <a href="https://drive.google.com/drive/u/1/folders/1VOkj9aZkndC9CPXhiomb7tfGM8HCXRdl" target="_blank" class="doc-btn">
                     <span>📋</span><span>Certifications</span>
                 </a>
             </div>
@@ -161,4 +161,5 @@
     </div>
 </body>
 </html>
+
 
